# verifiers-study

./: CHALLENGE.md  README.md
environments/lying_oracle/: README.md  __init__.py  agent.py  demo_final.ipynb  lying_oracle.py  pyproject.toml  test_environment.py
environments/lying_oracle/.ipynb_checkpoints/: demo-checkpoint.ipynb
environments/lying_oracle_hard/: adaptive_agent_hard.py  adaptive_lying_oracle.py  demo.ipynb  test_environment.py
environments/lying_oracle_hard_test/: .gitignore  README_EXPERIMENT.md  __init__.py  adaptive_agent_hard.py  demo_hard.ipynb  pyproject.toml
environments/word_count/: README.md  pyproject.toml  test_environment.py  word_count.py
litellm/: litellm_config.yaml
rollout_generation/: README.md  generate_rollouts.py
rollout_generation/rollouts/: rollouts.jsonl
