[project]
name = "lying-oracle-hard"
description = "Adaptive Lying Oracle RL Environment (HARDER VERSION) - Random t_switch, probabilistic lying, mode switch penalties"
tags = ["rl", "adaptive", "multi-turn", "verifiers", "challenge"]
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "verifiers>=0.1.8.post2",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["adaptive_lying_oracle.py", "adaptive_agent_hard.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 10
max_turns = 500
lying_probability = 0.8
mode_switch_penalty = 0.1


